Force compilation with O0 to avoid spurious compiler-induced failures

--- a/ctest/Makefile
+++ b/ctest/Makefile
@@ -25,6 +25,7 @@ endif
 
 override CFLAGS += -DADD$(BU) -DCBLAS
 ifeq ($(F_COMPILER),GFORTRAN)
+	override FFLAGS = $(filter_out(-O2 -O3,$(FFLAGS)) -O0
 	override FFLAGS += -fno-tree-vectorize
 endif
 override TARGET_ARCH=
